--- a/package.json
+++ b/package.json
@@ -1,34 +1,39 @@
 {
-  "name": "vue-admin-design",
+  "name": "Pathological_Section_Defect_Annotation_System",
   "version": "2.0.0",
-  "description": "基于vue + elementUI的管理系统模板",
-  "author": "baimingxuan <354372738@qq.com>",
+  "description": "Pathological_Section_Defect_Annotation_System",
+  "author": "B",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint"
+    "lint": "eslint --fix --ext .js,.vue src"
   },
   "dependencies": {
+    "@vue/reactivity": "^3.2.47",
     "@wangeditor/editor": "^5.0.0",
     "@wangeditor/editor-for-vue": "^1.0.0",
     "axios": "^0.21.2",
-    "core-js": "^3.6.5",
+    "core-js": "^3.30.0",
     "echarts": "^4.7.0",
-    "element-ui": "^2.13.0",
+    "element-plus": "^2.2.29",
+    "element-ui": "^2.15.13",
     "file-saver": "^2.0.2",
     "js-cookie": "^2.2.1",
+    "jsonwebtoken": "^9.0.0",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
     "lodash": "^4.17.20",
     "mavon-editor": "^2.9.0",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^8.0.0",
     "screenfull": "^5.0.2",
     "v-org-tree": "^1.0.12",
     "vg-editor": "^2.7.2",
     "vue": "^2.6.11",
     "vue-count-to": "^1.0.13",
-    "vue-cropper": "^0.5.4",
+    "vue-cropper": "^0.5.11",
     "vue-drr": "^1.0.9",
     "vue-router": "^3.2.0",
     "vue-video-player": "^5.0.2",
@@ -42,7 +47,8 @@
     "@vue/cli-plugin-unit-jest": "^4.5.0",
     "@vue/cli-service": "^4.5.0",
     "@vue/eslint-config-standard": "^5.1.2",
-    "@vue/test-utils": "^1.0.3",
+    "@vue/test-utils": "^1.3.5",
+    "ailabel": "^5.1.15",
     "babel-eslint": "^10.1.0",
     "compression-webpack-plugin": "^6.0.5",
     "eslint": "^6.7.2",
